--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine on
-RewriteBase /
-ErrorDocument 404 index.php?p=404
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteCond %{SCRIPT_FILENAME} !-f
+RewriteRule .* index.php [L]
